2005-11-03  Russell Bryant  <russell@digium.com>

	* res/res_agi.c: initialize buffer for result so that the contents are always valid in the response to GET FULL VARIABLE

2005-11-03  Kevin P. Fleming  <kpfleming@digium.com>

	* include/asterisk/app.h: re-work application arg/option parsing APIs for consistent naming, add doxygen docs for option API
	* many files: update to new APIs

2005-11-02  Kevin P. Fleming  <kpfleming@digium.com>

	* apps/app_dial.c (dial_exec_full): convert to use API calls for argument/option parsing

	* include/asterisk/channel.h: add doxygen docs for silence generator APIs

	* channel.c (ast_channel_bridge): simplify native-bridge return logic, remove 'unsuccessful' message since it causes too many questions :-)

2005-11-01  Kevin P. Fleming  <kpfleming@digium.com>

	* stdtime/localtime.c: fix build failure on uClibc systems (issue #5558)
	* devicestate.c: same

	* many files: make chan_misdn actually build (issue #5566)

	* many files: more Cygwin build system support (issue #4678)

	* apps/app_parkandannounce.c (parkandannounce_exec): supply parent channel to ast_request_and_dial so channel variables can be inherited (issue #5564)
	* include/asterisk/channel.h: add parent_channel field
	* channel.c (__ast_request_and_dial): use parent_channel field to inherit variables into new channel

	* apps/app_cut.c (cut_internal): use ast_separate_app_args() instead of open code (issue #5560)

	* apps/app_mixmonitor.c (launch_monitor_thread): ast_strlen_zero can handle NULL input (issue #5561)
	(mixmonitor_exec): same

	* res/res_features.c (ast_feature_request_and_dial): ensure that channel variables are inherited from the channel placing the call (issue #5499)

	* utils.c (getloadavg): change to using _BSD_SOURCE as the indicator for whether this function is present or not (issue #5549)
	
	* include/asterisk/utils.h (ast_slinear_saturated_add): force to be inlined whenever possible
	(ast_slinear_saturated_multiply): same